# Universal

./: .gitignore  README.md  Universal.test.diff.txt  paghetta.ac2  upload-to-s3.yaml
extensions/bank_synchronisation/: CMakeLists.txt  README.md  ch.banana.uni.banksync.main.js  ch.banana.uni.read.file.to.reconcile.js  ch.banana.uni.read.file.to.reconcile.qrc  ch.banana.uni.read.file.to.reconcile.sbaa  testsyncBankData.db
extensions/bank_synchronisation/doc/: readme.md  userDoc.md
extensions/bank_synchronisation/src/: ch.banana.uni.app.add.id.to.transactions.js  json.format.versions.js
extensions/bank_synchronisation/src/base/: json.format.versions.js
extensions/bank_synchronisation/test/: testcasessyncBankData.db  testcasessyncBankTransactionsData.db
extensions/bank_synchronisation/test/testcases/: 1284_test_Bank1 - B.xml  1284_test_Bank3.xml  postfinance_csvsyncBankData.db  test_01_swiss_camt053_08.xml  test_05_swiss_camt052_08.xml  test_06_swiss_camt052_08_balancenotice.xml  test_09_swiss_camt053_08_alldetails.xml  test_11_swiss_camt053_08_withdetailsglobaldebit.xml  test_12_swiss_camt053_04_nodetails.xml  test_15_swiss_camt054_04.xml  test_16_swiss_camt054_04_qr.xml  testsyncBankData.db
extensions/import/mapCsvFields/: CMakeLists.txt  ch.banana.uni.dlgmap.csv.js  ch.banana.uni.import.csv.js  ch.banana.uni.import.csv.manifest.json  ch.banana.uni.import.csv.qrc  ch.banana.uni.import.csv.sbaa  readme.md
extensions/import/yokoy/: CMakeLists.txt  ch.banana.uni.import.yokoy.js  ch.banana.uni.import.yokoy.manifest.json  ch.banana.uni.import.yokoy.qrc  ch.banana.uni.import.yokoy.sbaa  import.utilities.js
extensions/import/yokoy/test/: Double-entry with VAT-Sales tax - 3.ac2  ch.banana.uni.import.yokoy.test.js
extensions/import/yokoy/testcases/: yokoy.expenses.example.csv
invoices/tools/: CMakeLists.txt  README.md  ch.banana.application.invoice.export.contacts.js  ch.banana.application.invoice.export.invoices.js  ch.banana.application.invoice.export.items.js  ch.banana.application.invoice.import.contacts.js  ch.banana.application.invoice.import.invoices.js  ch.banana.application.invoice.import.items.js  ch.banana.application.invoice.tools.manifest.json  ch.banana.application.invoice.tools.qrc  ch.banana.application.invoice.tools.sbaa  changelog.md  invoice_tools.sbaa  translations.pro  translations_fr.ts
invoices/tools/doc/: setupenv.md  todo.md
invoices/tools/src/: CMakeLists.txt  ch.banana.application.invoice.export.contacts.js  ch.banana.application.invoice.export.estimates.js  ch.banana.application.invoice.export.invoices.js  ch.banana.application.invoice.export.items.js  ch.banana.application.invoice.import.contacts.js  ch.banana.application.invoice.import.estimates.js  ch.banana.application.invoice.import.invoices.js  ch.banana.application.invoice.import.items.js  ch.banana.application.invoice.tools.qrc  ch.banana.application.invoice.tools.sbaa  changelog.md  export_contacts.js  export_estimates.js  export_invoices.js  export_items.js  import_contacts.js  import_estimates.js  import_invoices.js  import_items.js  invoice_tools.qrc
invoices/tools/src/test/: ch.banana.application.invoice.export.contacts.test.js  ch.banana.application.invoice.export.items.test.js  ch.banana.application.invoice.import.contacts.test.js  export_contacts.test.js  export_invoices.test.js  export_items.test.js  export_tools.test.js  import_contacts.test.js  import_contacts_test.js  import_items_test.js
invoices/tools/src/translations/: translations_de.ts  translations_fr.ts  translations_it.ts
invoices/tools/test/: ch.banana.application.invoice.export.contacts.test.js  ch.banana.application.invoice.export.estimates.test.js  ch.banana.application.invoice.export.invoices.test.js  ch.banana.application.invoice.export.items.test.js  ch.banana.application.invoice.import.contacts.test.js  ch.banana.application.invoice.import.estimates.test.js  ch.banana.application.invoice.import.invoices.test.js  ch.banana.application.invoice.import.items.test.js  export_contacts.test.js  export_estimates.test.js  export_invoices.test.js  export_items.test.js  import_contacts.test.js  import_estimates.test.js  import_invoices.test.js  import_items.test.js
invoices/tools/test/testcases/: invoices_excl_vat.ac2
invoices/tools/tests/: README.md
invoices/tools/translations/: translations.pro  translations_en.ts  translations_fr.ts
report/accounting/portfolioAccounting/: CMakeLists.txt  Readme.md  ch.banana.portfolio.accounting.accounts.dialog.js  ch.banana.portfolio.accounting.calc.sales.data.dialog.js  ch.banana.portfolio.accounting.calc.sales.data.dialog.ui  ch.banana.portfolio.accounting.calculate.unit.price.js  ch.banana.portfolio.accounting.calculation.methods.js  ch.banana.portfolio.accounting.check.balances.data.js  ch.banana.portfolio.accounting.errormessagges.handler.js  ch.banana.portfolio.accounting.evaluation.report.js  ch.banana.portfolio.accounting.qrc  ch.banana.portfolio.accounting.reconciliation.report.js  ch.banana.portfolio.accounting.record.adjustment.transactions.js  ch.banana.portfolio.accounting.record.sales.transactions.js  ch.banana.portfolio.accounting.reports.css  ch.banana.portfolio.accounting.sbaa  ch.banana.portfolio.accounting.security.card.report.js  ch.banana.portfolio.accounting.update.market.prices.js  ch.banana.portfolio.accountingmanifest.json
report/accounting/portfolioAccounting/test/: ch.banana.portfolio.accounting.calc.sales.data.dialog.test.js  ch.banana.portfolio.accounting.calculate.unit.price.test.js  ch.banana.portfolio.accounting.check.balances.data.test.js  ch.banana.portfolio.accounting.evaluation.report.test.js  (+4 more)
report/customer/services_billing/: CMakeLists.txt  README.md
(+5607 files in other folders)
